src/components/ChatMessages.styl
@import "~@/shared.styl"

.chat
  display flex
  height 100%

.sidebar
  overflow-y auto
  height 100%
  min-width 200px
  padding 20px
  flex 1
  box-shadow inset 3px 0 3px -3px rgba(0, 0, 0, 0.1)
  position relative
  z-index 200

  @media (max-width $chat-sidebar-hide)
    display none

  &.collapsed
    max-width 82px
    min-width 82px

    .show-wide
      display none

    .sidebar-button .small
      display inline

  .sidebar-button .small
    display none

  .flagged h4
    margin-bottom 10px

  .sidebar-button
    text-uppercase-13()
    display block
    width 100%
    padding 0 10px
    margin-bottom 7px
    height 36px
    background alpha($color-light-blue-background, 0.6)
    border-radius $border-radius
    border none
    outline none
    cursor pointer
    transition all 0.1s

    &:hover,
    &:focus
      background darken($color-light-blue-background, 1)
      outline none

.mainbar
  max-width 1200px
  flex 3
  min-width 0
  height 100%
  display flex
  flex-direction column

  &.focusMode
    background $color-light-gray-background

    .day-separator,
    .unread-separator
      &::before
        background $color-gray-border

      .text
        background $color-light-gray-background
        color $color-gray-text

    & /deep/ .chat-message:not(.message-highlight)
      background none !important

      .avatar
        filter saturate(0)
        opacity 0.5

      .content-container
        color $color-gray-text
        filter saturate(0)

  &.extra-space
    background $color-light-gray-background

    .messages,
    .typing
      max-width 850px
      margin 0 auto !important

    .messages
      background #fff
      box-shadow 0 0 0 2px alpha(#000, 0.05)
      border-radius $border-radius
      margin-top -7px !important

    .typing
      padding 10px 20px 13px

    .chat-bottom
      margin-top -5px !important

  .chat-title
    position relative
    z-index 100
    background #fff
    box-shadow 0 1px 3px alpha(#000, 0.1)
    height 56px
    min-height 56px
    max-height 56px
    overflow hidden
    display flex
    align-items center
    padding 0 20px

    .fav-toggle
      margin-right 5px

      .far
        color $color-gray-text-light

      .fas
        color $color-gold

    .name
      text-title-20()
      margin-right 20px
      flex 1

    .user
      text-regular-13()
      position relative
      min-width 40px
      top 1px

      &[status="OFFLINE"] .avatar
        opacity 0.5
        filter saturate(0)

      .online-status
        width 10px
        height @width
        border-radius 50%
        position absolute
        right -3px
        top -2px
        border 2px solid #fff
        display none

      &[status="AWAY"] .online-status
        background #ffc843
        display block

      &[status="ONLINE"]
        .online-status
          background #83c844
          display block

        .avatar[status="OPEN"],
        .avatar[status="TYPING"]
          box-shadow 0 0 0 1px #fff, 0 0 0 3px #83c843

      .avatar
        margin 0 0 0 10px

      .unreads
        position absolute
        bottom 0
        right -4px
        padding 0 4px
        text-bold-13()
        background $color-blue
        color #fff
        text-shadow 0 -1px rgba(0, 0, 0, 0.5)
        border-radius $border-radius

      &.outside .unreads
        background $color-red
        font-feature-settings "case"
        padding 0 3px
        font-size 90%

  .messages-container
    flex 1
    overflow-y scroll

    .typing
      color $color-gray-text
      margin -10px 20px 10px 65px

  .messages
    padding 20px 0
    position relative

  .chat-bottom
    position relative
    background #fff
    padding 15px 20px 8px
    box-shadow 0 -1px 3px rgba(0, 0, 0, 0.1)

    .chat-inputs
      margin-bottom 6px

      .flex0,
      .control
        align-self flex-end

      .field
        min-width 0
        margin-bottom 0

        .expand-button
          margin-left 0
          margin-right 0

    .control.is-expanded
      min-width 0

    .editor
      margin-top -6px

      /deep/ .menubar .buttons
        overflow-y auto
        flex-wrap nowrap

      /deep/ .ProseMirror // @stylint ignore
        max-height 250px
        overflow-y auto

.day-separator,
.unread-separator
  position relative
  margin-top 10px

  &:before
    content ""
    position absolute
    left 0
    right 0
    top 12px
    height 2px
    z-index 0

  .text
    display inline-block
    padding 0 10px
    text-bold-13()
    background #fff
    z-index 1
    position relative

.day-separator
  text-align center

  &:before
    background #eee

  .text
    color $color-blue

.unread-separator
  text-align center

  &:before
    background $color-red

  &.rised
    text-align right
    margin-top -24px

    .text
      margin 0 15px

  .text
    color $color-red-text
    position relative
    top -1px

.workspace
  display flex
  align-items center
  margin-top -10px
  margin-bottom 25px

  .text
    flex 1
    padding-right 10px

    .name
      text-title-20()
      margin-top -5px

    .desc
      text-uppercase-13()
      color $color-gray-text
      margin-bottom -4px

  .logo
    width 42px
    height @width
    border-radius $border-radius

